#ifndef FULTIMA_GEN_ATTRIBUTEENUM_H
#define FULTIMA_GEN_ATTRIBUTEENUM_H

enum class Attribute {
    WLP = 0, INS = 1, DEX = 2, MIG = 3, NONE = 69
};

#endif //FULTIMA_GEN_ATTRIBUTEENUM_H
