@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
enum "::ItemType" as C_0009506588567340924694
enum C_0009506588567340924694 {
WEAPON
ARMOR
ACCESSORY
RANDOM
}
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
enum "::Attribute" as C_0013522169845410927695
enum C_0013522169845410927695 {
WLP
INS
DEX
MIG
NONE
}
class "::Armor" as C_0017091837617986840564
class C_0017091837617986840564 {
+Armor() : void
+Armor(std::string_view name, std::string_view desc, int default_price, int price, int initiative, bool isMartial, Attribute magic_defense, int magic_defense_bonus, Attribute defense, int defense_bonus, bool isShield) : void
..
+getDefAtr() const : Attribute
+getDefBonus() const : int
+getInitiative() const : int
+getIsMartial() const : bool
+getIsShield() const : bool
+getItemType() const : ItemType
+getMagDefAtr() const : Attribute
+getMagDefBonus() const : int
+setDef(int d) : void
+setInitiative(int in) : void
+setIsMartial(bool m) : void
+setIsShield(bool s) : void
+setMagDef(int md) : void
+toJson() const : QJsonObject
__
-_defense : Attribute
-_defense_bonus : int
-_initiative : int
-_isMartial : bool
-_isShield : bool
-_magic_defense : Attribute
-_magic_defense_bonus : int
}
}
package [systems] as C_0016692703261607978348 {
class "::ArmorGenerator" as C_0005567866987455504025
class C_0005567866987455504025 {
+ArmorGenerator(const QString & file_path) : void
..
+generate(const Player & player) : std::unique_ptr<Item>
{static} -isArmorUsable(const Player & player, const Armor & armor) : bool
__
-_cache_armors : std::vector<std::unique_ptr<Armor>>
}
}
package [io] as C_0016395333381226012294 {
class "::JsonReader" as C_0002948440278719519756
class C_0002948440278719519756 {
{static} +loadItems(const QString & file_path, ItemType type) : std::vector<std::unique_ptr<Item>>
{static} +loadQualities(const QString & file_path) : std::vector<Quality>
{static} -parseArmor(const QJsonObject & JsonArmorObj, bool makeShield) : std::unique_ptr<Armor>
{static} -parseQuality(const QJsonObject & JsonQualityObj, bool makeOffensive) : Quality
{static} -parseWeapon(const QJsonObject & JsonWeaponObj) : std::unique_ptr<Weapon>
__
}
}
}
}
C_0005967165952864249862 ..> C_0009506588567340924694
C_0017091837617986840564 ..> C_0009506588567340924694
C_0017091837617986840564 o-- C_0013522169845410927695 : -_magic_defense
C_0017091837617986840564 o-- C_0013522169845410927695 : -_defense
C_0005967165952864249862 <|-- C_0017091837617986840564
C_0005567866987455504025 ..> C_0005967165952864249862
C_0005567866987455504025 o-- C_0017091837617986840564 : -_cache_armors
C_0002948440278719519756 ..> C_0017091837617986840564
C_0002948440278719519756 ..> C_0009506588567340924694
C_0002948440278719519756 ..> C_0005967165952864249862

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
